# video-auto-editor

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy-pages.yml
docs/: DEV_SETUP.md  SAMPLES.md
docs/01-plan/: PLAN.md
docs/02-design/: DESIGN.md  capcut-schema.md
docs/03-analysis/: PHASE_1_REPORT.md  PHASE_2_REPORT.md  PHASE_3_REPORT.md  PHASE_4_REPORT.md  PHASE_5_REPORT.md
scripts/: README.md  _run-backend.bat  _run-frontend.bat  create-desktop-shortcut.bat  open-editor.bat  open-editor.ps1  setup.bat  stop-editor.bat
src/vae/: __init__.py  __main__.py
src/vae/analyzers/: audio.py  faces.py  loudness.py  scene.py  stt.py
src/vae/models/: __init__.py  clip.py  style.py  subtitle.py  timeline.py
src/vae/pipeline/: __init__.py  context.py  events.py  orchestrator.py  subtitles.py
src/vae/pipeline/rules/: vlog.py  (+1 more)
src/vae/utils/: bgm.py  crop.py  ffmpeg.py  paths.py
src/vae/writers/: __init__.py  capcut.py  renderer.py  report.py  srt.py
tests/: conftest.py  test_audio.py  test_e2e.py  test_faces.py  test_loudness.py  test_models.py  test_shorts_rule.py  test_stt.py  test_style_crop.py  test_subtitles_pipeline.py
web/: README.md
web/backend/: app.py  jobs.py  requirements.txt
web/frontend/: next.config.js  package-lock.json  package.json  tailwind.config.ts
web/frontend/app/: globals.css  layout.tsx  page.tsx
web/frontend/components/: FilePicker.tsx  HowToUse.tsx  JobForm.tsx  LogStream.tsx  Metrics.tsx  ProgressBar.tsx  TimelinePreview.tsx  VideoPlayer.tsx
web/frontend/lib/: api.ts  demo.ts  history.ts
(+3 files in other folders)
